--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "node": "^2.0.22"
   }
 }
