--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0",
-    "node": "^2.0.22"
+    "morgan": "^1.10.0"
+   
   }
 }
