--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-        "start":"node server.js"
-
+    "start": "node server.js"
   },
   "author": "Kirti",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "morgan": "^1.10.0"
-   
+    "morgan": "^1.10.0",
+    "node": "^19.8.1",
+    "nodemon": "^2.0.22"
   }
 }
