--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
-    "node": "^19.8.1"
+    "nodemon": "^2.0.22"
   }
 }
